--- a/.github/workflows/maven-run.yml
+++ b/.github/workflows/maven-run.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Start job at 9:14 AM IST (03:44 UTC) Monday–Friday
     - cron: "44 3 * * 1-5"
-  workflow_dispatch:  # allows manual run
+  workflow_dispatch: # allows manual run
 
 jobs:
   build:
@@ -27,6 +27,6 @@ jobs:
           while [ $(date +%s) -lt $end ]
           do
             echo "Starting Maven task at $(date)"
-            mvn clean test -DsuiteXmlFile=./testng.xml
+            mvn clean test -DsuiteXmlFile=./testng.xml || true
             echo "Task finished at $(date). Restarting immediately..."
           done
